Name:                   node-manager
Version:                0.1.0
Author:                 Hong <hongj77@gmail.com>
Maintainer:             Hong <hongj77@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Server that manages alarm nodes
Description:            Server that manages alarm nodes
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Node.Manager
                        Node.Manager.Client
  Other-Modules:        Node.Manager.Types
                        Node.Manager.Types.Acid
                        Node.Manager.Routes
                        Node.Manager.Routes.Foundation
                        Node.Manager.DIG
                        Node.Manager.TH
  
  Build-Depends:        http-types >= 0.8.5,
                        transformers >= 0.4.1.0,
                        base >= 4 && < 5
                       ,yesod
                       ,text
                       ,aeson
                       ,async               
                       ,bytestring        
                       ,simple-store >= 0.1.2
                       ,mtl
                       ,lens
                       ,warp   
                       ,containers
                       ,unordered-containers >= 0.2.5.0
                       ,wreq
                       ,yaml
                       ,directory
                       ,system-fileio
                       ,system-filepath
                       ,lens-aeson
                       ,cereal
                       ,template-haskell
                       ,vector


executable node-manager
  main-is:            Main.hs
  Default-Language:   Haskell2010
  hs-source-dirs:     src
  Build-Depends:      http-types >= 0.8.5,
                      transformers >= 0.4.1.0,
                      base >= 4 && < 5
                     ,yesod
                     ,text
                     ,aeson
                     ,async               
                     ,bytestring        
                     ,simple-store >= 0.1.2
                     ,mtl
                     ,lens
                     ,warp   
                     ,containers
                     ,unordered-containers >= 0.2.5.0
                     ,wreq
                     ,yaml
                     ,directory
                     ,system-fileio
                     ,system-filepath
                     ,lens-aeson
                     ,cereal
                     ,template-haskell
                     ,vector



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , http-types
                      , transformers
                      , hspec
                      , yesod
                      , yesod-test
                      , async
                      , simple-store
                      , bytestring 
                      , mtl
                      , containers
                      , unordered-containers >= 0.2.5.0
                      , text
                      , aeson
                      , lens
                      , warp
                      , wreq
                      , yaml
                      , directory
                      , system-fileio
                      , system-filepath
                      , lens-aeson
                      , cereal
                      , template-haskell
                      , vector
                       
                      
Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/node-manager.git
