Name:                   node-manager
Version:                0.1.0
Author:                 Hong <hongj77@gmail.com>
Maintainer:             Hong <hongj77@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Server that manages alarm nodes
Description:            Server that manages alarm nodes
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -threaded -O2 -rtsopts -Wall
  Exposed-Modules:      Node.Manager
                        Node.Manager.Client
  Other-Modules:        Node.Manager.Types
                        Node.Manager.Types.SimpleStore
                        Node.Manager.Routes
                        Node.Manager.Routes.Foundation
                        Node.Manager.DIG
  
  Build-Depends:        base >= 4 && < 5
                       ,yesod-core
                       ,text
                       ,aeson
                       ,async               
                       ,bytestring        
                       ,simple-store          >= 0.1.3
                       ,plow-extras-lens      >= 0.1.1
                       ,node-client-configs   >= 0.1.2
                       ,mtl
                       ,lens
                       ,warp
                       ,wreq   
                       ,containers
                       ,unordered-containers  >= 0.2.5.0
                       ,http-types            >= 0.8.5
                       ,transformers          >= 0.4.1.0
                       ,yaml
                       ,system-fileio
                       ,system-filepath
                       ,lens-aeson
                       ,cereal
                       ,template-haskell
                       ,streaming-commons
                       ,unix
                        


executable node-manager
  main-is:            Main.hs
  Default-Language:   Haskell2010
  hs-source-dirs:     src
  Build-Depends:      base 
                     ,yesod-core
                     ,text
                     ,aeson
                     ,async               
                     ,bytestring        
                     ,simple-store 
                     ,plow-extras-lens
                     ,node-client-configs
                     ,mtl
                     ,lens
                     ,warp   
                     ,wreq
                     ,containers
                     ,unordered-containers
                     ,yaml
                     ,http-types
                     ,transformers
                     ,system-fileio
                     ,system-filepath
                     ,lens-aeson
                     ,cereal
                     ,template-haskell
                     ,streaming-commons
                     ,unix


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -fno-warn-orphans
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , yesod-core
                      , yesod-test
                      , async
                      , simple-store
                      , plow-extras-lens
                      , node-client-configs
                      , bytestring 
                      , mtl
                      , containers
                      , unordered-containers
                      , text
                      , aeson
                      , lens
                      , warp
                      , wreq
                      , yaml
                      , http-types 
                      , transformers
                      , system-fileio
                      , system-filepath
                      , lens-aeson
                      , cereal
                      , template-haskell
                      , streaming-commons
                      , unix 
                      
Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/node-manager.git
