Name:                   node-manager
Version:                0.1.0
Author:                 Hong <hongj77@gmail.com>, Darren Midkiff <darren.midkiff@plowtech.net>
Maintainer:             Hong <hongj77@gmail.com>, Darren Midkiff <darren.midkiff@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Server that manages alarm nodes
Description:            Server that manages alarm nodes
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Node.Manager
  Other-Modules:        Node.Manager.Routes
  
  Build-Depends:        aeson
                      , async
                      , base >= 4 && < 5
                      , blaze-html
                      , bytestring
                      , cereal
                      , containers
                      , either >= 4.4.1
                      , http-types            >= 0.8.5
                      , lens                  >= 4.4 && < 4.5
                      , lens-aeson
                      , mtl
                      , node-client-configs   >= 0.1.2
                      , plow-extras-lens      >= 0.1.1
                      , servant
                      , servant-server
                      , simple-store          >= 0.1.3 && <= 0.2.0
                      , streaming-commons
                      , system-fileio
                      , system-filepath
                      , template-haskell
                      , text
                      , transformers          >= 0.4.1.0
                      , unix
                      , unordered-containers  >= 0.2.5.0
                      , wai >= 3.0.3.0
                      , warp
                      , wreq                  >= 0.2.0.0 && < 0.3.0.0
                      , yaml
                      , yesod-core
                      , servant-blaze
                      , servant-client
                        


executable node-manager
  main-is:            Main.hs
  Default-Language:   Haskell2010
  hs-source-dirs:     src
  Build-Depends:      aeson
                    , async
                    , base
                    , blaze-html
                    , bytestring
                    , cereal
                    , containers
                    , either >= 4.4.1
                    , http-types
                    , lens
                    , lens-aeson
                    , mtl
                    , node-client-configs
                    , plow-extras-lens
                    , servant
                    , servant-server
                    , simple-store
                    , streaming-commons
                    , system-fileio
                    , system-filepath
                    , template-haskell
                    , text
                    , transformers
                    , unix
                    , unordered-containers
                    , wai >= 3.0.3.0
                    , warp
                    , wreq
                    , yaml
                    , yesod-core
                    , servant-blaze
                    , servant-client

  ghc-options:       -threaded -O2 -rtsopts -Wall 


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -fno-warn-orphans
  Main-Is:              Spec.hs
  Build-Depends:        QuickCheck
                      , aeson
                      , async
                      , base
                      , blaze-html
                      , bytestring
                      , cereal
                      , containers
                      , either >= 4.4.1
                      , hspec
                      , http-types
                      , lens
                      , lens-aeson
                      , mtl
                      , node-client-configs
                      , plow-extras-lens
                      , servant
                      , servant-blaze
                      , servant-client
                      , servant-server
                      , simple-store
                      , streaming-commons
                      , system-fileio
                      , system-filepath
                      , template-haskell
                      , text
                      , transformers
                      , unix
                      , unordered-containers
                      , wai >= 3.0.3.0
                      , warp
                      , wreq
                      , yaml
                      , yesod-core
                      , yesod-test
                      , lens
                      , lens-aeson
                      
Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/node-manager.git
